[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/Stages/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://data/Areas/CandyCornPlanet.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/Areas/LabPlanet.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/Areas/EyePlanet.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/Areas/AlienPlanet.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/UI/MainMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/Areas/DreamPlanet.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/UI/Credits.tscn" type="PackedScene" id=8]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Planets" type="Node2D" parent="."]

[node name="CandyCornPlanet" parent="Planets" instance=ExtResource( 2 )]
position = Vector2( 792, 368 )

[node name="EyePlanet" parent="Planets" instance=ExtResource( 4 )]
position = Vector2( 208, 400 )

[node name="LabPlanet" parent="Planets" instance=ExtResource( 3 )]
position = Vector2( 232, 136 )

[node name="AlienPlanet" parent="Planets" instance=ExtResource( 5 )]
position = Vector2( 480, 368 )

[node name="DreamPlanet" parent="Planets" instance=ExtResource( 7 )]
position = Vector2( 688, 136 )

[node name="Control" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="Control" instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 270 )
current = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Control2" type="Control" parent="."]
visible = false
margin_right = 960.0
margin_bottom = 544.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="Control2" instance=ExtResource( 8 )]
[connection signal="selection_made" from="Planets/CandyCornPlanet" to="." method="_on_Planet_selection_made"]
[connection signal="selection_made" from="Planets/EyePlanet" to="." method="_on_Planet_selection_made"]
[connection signal="selection_made" from="Planets/LabPlanet" to="." method="_on_Planet_selection_made"]
[connection signal="selection_made" from="Planets/AlienPlanet" to="." method="_on_Planet_selection_made"]
[connection signal="play_pressed" from="Control/MainMenu" to="." method="_on_MainMenu_play_pressed"]
[connection signal="return_from_credits" from="Control2/Credits" to="." method="_on_Credits_return_from_credits"]
